# flatshare

./: .dockerignore  .gitignore  README.md  Session.vim  main.py  models.py  pyproject.toml  testing.db
.github/workflows/: backend_docker_release.yml  ci_backend.yml
docker/: Dockerfile
src/: __init__.py  authentication.py  buy_in.py  buy_out.py  depreciation.py  errors.py  logger.py  main.py  middleware.py  models.py  timestamps.py  utils.py
src/routers/: flats.py  items.py  login.py  reset.py  transactions.py  users.py
tests/: conftest.py  test_depreciation.py  test_flats.py  test_items.py  test_users.py
