[project]
name = "flatshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]
