[project]
name = "flatshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]
