[project]
name = "flatshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]
